# craftingway

./: .containerignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  Containerfile  LICENSE  README.md  index.html  lingui.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  ci.yml  deploy-to-netlify.yml
public/: items_jp.json  manifest.json  recipes.json  recipes.msgpack
public/translations/: actions_deu.json  actions_fra.json  actions_jpn.json  items_deu.json  items_fra.json  items_jpn.json
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  crontab.sh  fly.toml  litefs.yml  sqlite_backup.sh
server/migrations/: 20230531035133_create_shared_rotations.down.sql  20230531035133_create_shared_rotations.up.sql
server/src/: error.rs  lib.rs  main.rs  models.rs  rate_limit.rs  routes.rs  serde_custom.rs  slugger.rs  tracing.rs
server/src/models/: shared_rotation.rs
server/src/routes/: rotation.rs  words.rs
server/src/tracing/: size_based_file_appender.rs
server/src/words/: adjectives.txt  nouns.txt
src/: App.tsx  index.scss  main.scss  main.tsx  normalize.css  variables.css
src/components/: ActionList.tsx  ActionPlaylist.tsx  App.scss  App.tsx  BuffList.scss  BuffList.tsx  CopyButton.scss  CopyButton.tsx  CopyMacroButtons.scss  CopyMacroButtons.tsx  CraftState.tsx  CraftStateDisplay.scss  CraftStateDisplay.tsx  CraftStepDisplay.scss  CraftStepDisplay.tsx  DawntrailNotice.scss  DawntrailNotice.tsx  DocumentTitle.tsx  Emoji.scss  Emoji.tsx  Footer.tsx  Header.scss  Header.tsx  HelpPopoverButton.scss  HelpPopoverButton.tsx  Highlighter.tsx  Hightlighter.scss  Icon.scss  (+43 more)
(+45 files in other folders)
