[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
hyper = { version = "0.14.26", features = ["full"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["cors", "timeout", "trace"] }
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
